# py-obsidian-to-jekyll

./: .gitignore  README.md  pyproject.toml
openspec/changes/archive/2026-02-15-smart-link-resolution/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-15-smart-link-resolution/specs/cross-post-linking/: spec.md
openspec/changes/archive/2026-02-15-smart-link-resolution/specs/link-resolution/: spec.md
openspec/changes/archive/2026-02-15-smart-link-resolution/specs/svg-embedding/: spec.md
openspec/changes/archive/2026-02-15-smart-link-resolution/specs/vault-link-fallback/: spec.md
openspec/specs/cross-post-linking/: spec.md
openspec/specs/link-resolution/: spec.md
openspec/specs/svg-embedding/: spec.md
openspec/specs/vault-link-fallback/: spec.md
src/blog_publisher/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
